src/components/selected-projects/selected-projects.css
.sp__scrolling-wrapper {
  @apply .flex .flex-no-wrap .overflow-x-auto;
  -webkit-overflow-scrolling: touch;

  @media (min-width: 640px) {
    @apply .flex-wrap;
  }

  & .sp__project-card {
    height: 80px;

    @media (min-width: 640px) {
      height: 110px;
    }
  }

  &::-webkit-scrollbar {
    display: none;
  }

  & li {
    flex: 0 0 auto;
    width: 143px;

    @media (min-width: 640px) {
      width: 200px;
    }

    &:last-of-type {
      /* Fixes bug where cards won't scroll to the edge of the screen */
      @apply .w-2;
    }
  }
}

